[Add]: 2.8 对Group /api/v1 的接口进行JWT token鉴权.
