# chapter-2-blog-service/docs/swagger.json
@@ -8,45 +8,6 @@
         "version": "v1.0"
     },
     "paths": {
-        "/api/v1/auth": {
-            "post": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "获取认证token",
-                "parameters": [
-                    {
-                        "description": "GetAuthRequest",
-                        "name": "GetAuthRequest",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/validate.GetAuthRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "成功",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "请求错误",
-                        "schema": {
-                            "$ref": "#/definitions/errcode.Error"
-                        }
-                    },
-                    "500": {
-                        "description": "内部错误",
-                        "schema": {
-                            "$ref": "#/definitions/errcode.Error"
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/tags": {
             "get": {
                 "produces": [
@@ -54,6 +15,13 @@
                 ],
                 "summary": "获取多个标签",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT Token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "maxLength": 100,
                         "type": "string",
@@ -113,6 +81,13 @@
                 "summary": "新增标签",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "JWT Token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "CreateTagRequest",
                         "name": "CreateTagRequest",
                         "in": "body",
@@ -151,6 +126,13 @@
                 ],
                 "summary": "更新标签",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT Token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "UpdateTagRequest",
                         "name": "UpdateTagRequest",
@@ -192,11 +174,57 @@
                 "summary": "删除标签",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "JWT Token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "标签 ID",
                         "name": "id",
                         "in": "path",
                         "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "请求错误",
+                        "schema": {
+                            "$ref": "#/definitions/errcode.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "内部错误",
+                        "schema": {
+                            "$ref": "#/definitions/errcode.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "获取认证token",
+                "parameters": [
+                    {
+                        "description": "GetAuthRequest",
+                        "name": "GetAuthRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/validate.GetAuthRequest"
+                        }
                     }
                 ],
                 "responses": {
